<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background2"
    android:orientation="vertical">

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="200dp"
                     >
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="50dp"
                         android:src="@drawable/login_ic_camera_24"
                         android:layout_marginLeft="70dp"/>

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="CAMERA"
                         android:textSize="40dp"
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         android:layout_marginTop="90dp"
                         android:layout_marginLeft="208dp"
                         android:fontFamily="sans-serif-condensed"/>

              </RelativeLayout>

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="330dp"
                  android:layout_margin="15dp"
                  android:background="@drawable/login_custom_dangnhap">

                     <EditText
                         android:id="@+id/edTaiKhoan"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginTop="40dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:drawableLeft="@drawable/login_icon_user"
                         android:textColorHighlight="@color/white"
                         android:textColorHint="@color/white"
                         android:textSize="20dp"
                         android:drawablePadding="15dp"
                         android:textColor="@color/white"
                         android:fontFamily="serif-monospace"
                         android:hint="@string/login_user"/>

                     <EditText
                         android:id="@+id/edMatKhau"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginTop="120dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:inputType="textPassword"
                         android:drawableLeft="@drawable/login_icon_password"
                         android:textSize="20dp"
                         android:drawablePadding="15dp"
                         android:textColorHint="@color/white"
                         android:textColor="@color/white"
                         android:fontFamily="serif-monospace"
                         android:hint="@string/login_password"/>
                     <CheckBox
                         android:id="@+id/cbcheckbox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="180dp"
                         android:layout_marginLeft="15dp"
                         android:text="@string/login_luudangnhap"
                         android:textColor="@color/white"/>
                     <TextView
                         android:id="@+id/tvQuenMatKhau"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/login_quenmatkhau"
                         android:textColor="@color/white"
                         android:layout_marginTop="185dp"
                         android:layout_marginLeft="258dp"
                         android:textStyle="italic" />
                     <TextView
                         android:id="@+id/tvThongBaoDangNhap"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAllCaps="false"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="225dp"
                         android:textColor="#FF0000"
                         android:textSize="18dp"/>
                     <Button
                         android:id="@+id/btnDangNhap"
                         android:layout_width="150dp"
                         android:layout_height="50dp"
                         android:text="@string/login_dangnhap"
                         android:textAllCaps="false"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="255dp" />


              </RelativeLayout>

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
                     <TextView
                         android:id="@+id/login_btnDangKi"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAllCaps="false"
                         android:text="@string/login_dangki"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="130dp"
                         android:textColor="@color/white"
                         android:textSize="15dp"
                         />
              </RelativeLayout>

       </LinearLayout>