<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activiti.Profile.SuaThongTin"
    android:orientation="vertical"
    android:background="@drawable/backmainblur">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sửa thông tin "
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:drawableRight="@drawable/ic_note_24"
        android:drawablePadding="8dp"
        android:layout_marginBottom="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/login_custom_dangnhap"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edTenCu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/ic_rename_24"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:drawablePadding="15dp"
            android:textColor="@color/white"
            android:fontFamily="serif-monospace"
            android:hint="@string/change_infor_name" />
        <EditText
            android:id="@+id/edPhoneMoi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/ic_phonenumber_24"
            android:textSize="20dp"
            android:textStyle="bold"
            android:drawablePadding="15dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:fontFamily="serif-monospace"
            android:hint="@string/change_infor_phone"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edAdressMoi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/ic_adress_24"
            android:textSize="20dp"
            android:textStyle="bold"
            android:drawablePadding="15dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:fontFamily="serif-monospace"
            android:hint="@string/change_infor_adress"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnTroLaiSuaThongTin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="Trở lại"
                android:textAllCaps="false"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"/>
            <Button
                android:id="@+id/btnXacNhanSuaThongTin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="Xác nhận"
                android:textAllCaps="false"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="40dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>