<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/backmainblur">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#99FFFFFF"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnBackDiaChi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_24"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Địa chỉ cửa hàng"
            android:textAllCaps="false"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@+id/btnBackDiaChi"
            android:layout_centerVertical="true"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Địa chỉ cửa hàng"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:drawableRight="@drawable/ic_location_24"
            android:drawablePadding="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custom_diachicuahang"
            android:orientation="vertical"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/diaChi1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_diaChiCuaHang"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_located_black_24"
                android:drawablePadding="10dp"/>
            <TextView
                android:id="@+id/diaChi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_diaChiCuaHang2"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_located_black_24"
                android:drawablePadding="10dp"/>
            <TextView
                android:id="@+id/diaChi3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_diaChiCuaHang3"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_located_black_24"
                android:drawablePadding="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/custom_diachicuahang">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activiti.ShopAddress" />
       </LinearLayout>
    </LinearLayout>

</LinearLayout>
