<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activiti.Profile.ChangePassword"
    android:background="@drawable/backmainblur"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đổi Mật Khẩu"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:drawableRight="@drawable/ic_lock_24"
        android:drawablePadding="8dp"
        android:layout_marginBottom="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="20dp"
        android:background="@drawable/login_custom_dangnhap"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edMatKhauCu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/login_icon_password"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:drawablePadding="15dp"
            android:textColor="@color/white"
            android:fontFamily="serif-monospace"
            android:hint="@string/change_password_old"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/edMatKhauMoi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_changepassword_24"
            android:textSize="20dp"
            android:textStyle="bold"
            android:drawablePadding="15dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:fontFamily="serif-monospace"
            android:hint="@string/change_password_matkhaumoi"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edMatKhauMoi2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_changepassword_24"
            android:textSize="20dp"
            android:textStyle="bold"
            android:drawablePadding="15dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:fontFamily="serif-monospace"
            android:hint="@string/change_password_matkhaumoi2"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tvThongBaoDoiPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColorHint="@color/white"
            android:textColor="#F31717"
            android:fontFamily="serif-monospace"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnTroLai"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="Trở lại"
                android:textAllCaps="false"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"/>
            <Button
                android:id="@+id/btnXacNhan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="Xác nhận"
                android:textAllCaps="false"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="40dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>