<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activiti.Profile.Setting"
    android:background="@drawable/backmainblur"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#99FFFFFF"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnBackSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_24"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cài đặt"
            android:textAllCaps="false"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@+id/btnBackSetting"
            android:layout_centerVertical="true"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_setting_24"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dangki_custom"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/suathongtin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_suathongtin"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingLeft="15dp"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/icon_profile_user"
            android:drawablePadding="5dp"/>
        <TextView
            android:id="@+id/suathongtin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">>"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dangki_custom"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/doimatkhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_doimatkhau"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingLeft="15dp"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_changepassword_24"
            android:drawablePadding="7dp"/>
        <TextView
            android:id="@+id/doimatkhau2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">>"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dangki_custom"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/lienhevoichungtoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_lienhevoichungtoi"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingLeft="15dp"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_phonenumber_24"
            android:drawablePadding="7dp"/>
        <TextView
            android:id="@+id/lienhevoichungtoi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">>"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>



</LinearLayout>